@@ -1,3 +1,11 @@
+2008-02-21  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemNarrowSpacePlugin.cpp:
+	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPlugin.h: Implement SetTime
+	using NPN_RequestRead() if it's available on the stream
+	(which it usually never is...) (Closes: #474841)
+
 2008-02-20  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-fullscreen.c: (totem_fullscreen_finalize):
